--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,16 +9,17 @@
             <%= f.text_field :name, class: 'form-control' %>
             
             <%= f.label :email %>
-            <%= f.text_field :email %>
+            <%= f.text_field :email, class: 'form-control' %>
             
             <%= f.label :password %>
-            <%= f.password_field :password %>
+            <%= f.password_field :password, class: 'form-control' %>
             
             <%= f.label :password_confirmation, "Confirmation" %>
-            <%= f.password_field :password_confirmation %>
+            <%= f.password_field :password_confirmation, class: 'form-control' %>
             
             <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
         
         <% end %>
+        
     </div>
 </div>
