Upload the user-profile project which contains a bug

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -102,3 +102,9 @@ input {
     color: $state-danger-text;
   }
 }
+
+/* Link with button format */
+.button_link {
+    color: #fff;
+    font-weight: bold;
+}
