--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,22 @@
 <h1>
-  <%= gravatar_for @user %>
-  <%= @user.name %>
+  <%= gravatar_for @user %><%= @user.name %>さんのプロフィール
 </h1>
+
+<div class="row">
+    <div class="col-md-2">自己紹介</div>
+    <div class="col-md-10"><%= @user.introduction %></div>
+</div>
+<div class="row">
+    <div class="col-md-2">メールアドレス</div>
+    <div class="col-md-10"><%= @user.email %></div>
+</div>
+<div class="row">
+    <div class="col-md-2">地域</div>
+    <div class="col-md-10"><%= @user.region %></div>
+</div>
+
+<% if current_user.id == @user.id %>
+    <p>
+      <span class="btn btn-primary"><%= link_to "プロフィールを編集する", edit_user_path(@user), :class => "button_link" %></span>
+    </p>
+<% end %>
