--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,8 @@
   <%= gravatar_for @user %><%= @user.name %>さんのプロフィール
 </h1>
 
+<h2><%= @pid %></h2>
+
 <div class="row">
     <div class="col-md-2">自己紹介</div>
     <div class="col-md-10"><%= @user.introduction %></div>
