--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,7 @@
 <h1>
   <%= gravatar_for @user %><%= @user.name %>さんのプロフィール
+  <%= @unko %>
 </h1>
-
-<h2><%= @pid %></h2>
 
 <div class="row">
     <div class="col-md-2">自己紹介</div>
