--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,14 +6,26 @@
                 <%= @user.name %>
             </h1>
         </section>
+        <h2>フォローユーザー <%= @followings.count %>人</h2>
+        <ul>
+            <% @followings.each do |following| %>
+                <li><%= link_to following.name, following %>さん</li>
+            <% end %>
+        </ul>
+        <h2>フォロワーユーザー <%= @followers.count %>人</h2>
+        <ul>
+            <% @followers.each do |follower| %>
+                <li><%= link_to follower.name, follower %>さん</li>
+            <% end %>
+        </ul>
     </aside>
     <div class="col-md-8">
+        <%= render 'follow_form' if logged_in? %>
         <% if @user.microposts.any? %>
-        <h3>Microposts (<%= @user.microposts.count %>)</h3>
-        <ol class="microposts">
-            <%= render @microposts %>
-        </ol>
+            <h3>Microposts (<%= @user.microposts.count %>)</h3>
+            <ol class="microposts">
+                <%= render @microposts %>
+            </ol>
         <% end %>
     </div>
 </div>
-
