amended to show profile update function

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,3 +29,9 @@
         <% end %>
     </div>
 </div>
+
+<% if current_user.id == @user.id %>
+    <p>
+      <span class="btn btn-primary"><%= link_to "プロフィールを編集する", edit_user_path(@user), :class => "button_link" %></span>
+    </p>
+<% end %>
