--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,8 +39,10 @@
     </div>
 </div>
 
-<% if current_user.id == @user.id %>
-    <p>
-      <span class="btn btn-primary"><%= link_to "プロフィールを編集する", edit_user_path(@user), :class => "button_link" %></span>
-    </p>
+<% if current_user %>
+    <% if current_user.id == @user.id %>
+        <p>
+          <span class="btn btn-primary"><%= link_to "プロフィールを編集する", edit_user_path(@user), :class => "button_link" %></span>
+        </p>
+    <% end %>
 <% end %>
